Before DataFrame.loadContent() refactor